# cloudsync

./: pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/cloudsync/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: cloud.dart  file.dart  main.dart  setting.dart
lib/setting/: cos.dart  r2.dart  s3.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: cloud_service.dart  config.dart  data.dart
lib/widgets/: listile.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: build.rs  cloud_service.rs  config.rs  data.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_cloudsync.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_cloudsync.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
