[package]
name = "rust_lib_cloudsync"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.30"
anyhow = "1.0.30"
opendal = { version = "0.45.1", features = ["services-gcs", "services-dropbox", "services-oss", "services-cos", "services-azdls", "services-azblob", "services-s3", "native-tls-vendored"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde = "1"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.37.0" }
flutter_logger = "0.6.1"
log = "0.4.21"
once_cell = "1.19.0"
